added code body

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <link href="style.css" type="text/css" rel="stylesheet"/>
     </head>
     <body>
-
+        <header>
+            <h1></h1>
+        </header>
     </body>
 </html>
