--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
     </head>
     <body>
         <header>
-            <h1></h1>
+            <h1>Common HTML tags</h1>
         </header>
+        <div class="container">
+            <table>
+                <thead>
+                    <tr>
+                        <th colspan='2'></th>
+                    </tr>
+                </thead>
+                <tr>
+                    <
+                </tr>
+            </table>
+        </div>
     </body>
 </html>
