--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
             <table>
                 <thead>
                     <tr>
-                        <th colspan='2'></th>
+                        <th colspan='4'></th>
+                    </tr>
+                    <tr>
+                        <th>
+                            <h2>HTML Tag</h2>
+                        </th>
+                        <th>
+                            <h2>Tag Description</h2>
+                        </th>
                     </tr>
                 </thead>
-                <tr>
-                    <
-                </tr>
             </table>
         </div>
     </body>
