made changes after reviewing code

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
             <table>
                 <thead>
                     <tr>
-                        <th colspan='4'></th>
-                    </tr>
-                    <tr>
-                        <th>
-                            <h2>HTML Tag</h2>
-                        </th>
-                        <th>
-                            <h2>Tag Description</h2>
-                        </th>
+                        <th>Tag</th>
+                        <th>Name</th>
+                        <th>Description</th>
                     </tr>
                 </thead>
+                <tbody>
+                    <tr>
+                        <td><h3>&lt;html&gt;</h3></td>
+                        <td></td>
+                    </tr>
+                </tbody>
             </table>
         </div>
     </body>
