--- a/index.html
+++ b/index.html
@@ -8,20 +8,31 @@
         <header>
             <h1>Common HTML tags</h1>
         </header>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Tag</th>
-                        <th>Name</th>
-                        <th>Description</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td><h3>&lt;html&gt;</h3></td>
-                        <td></td>
-                    </tr>
-                </tbody>
-            </table>
+        <table class="Table1">
+            <thead>
+                <tr>
+                    <th>Tag</th>
+                    <th>Name</th>
+                    <th>Description</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><h3>&lt;html&gt;</h3></td>
+                    <td><h3>HTML</h3></td>
+                    <td>Defines the root of an HTML document</td>
+                </tr>
+                <tr>
+                    <td><h3>&lt;header&gt;</h3></td>
+                    <td><h3>Header</h3></td>
+                    <td><h3>Defines a header for a document or section</h3></td>
+                </tr>
+                <tr>
+                    <td><h3>&lt;footer&gt;</h3></td>
+                    <td><h3>Footer</h3></td>
+                    <td><h3>Defines a footer for a document or section</h3></td>
+                </tr>
+            </tbody>
+        </table>
     </body>
 </html>
