Updated table code

--- a/index.html
+++ b/index.html
@@ -18,19 +18,24 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><h3>&lt;html&gt;</h3></td>
-                    <td><h3>HTML</h3></td>
+                    <td>&lt;html&gt;</td>
+                    <td>HTML</td>
                     <td>Defines the root of an HTML document</td>
                 </tr>
                 <tr>
-                    <td><h3>&lt;header&gt;</h3></td>
-                    <td><h3>Header</h3></td>
-                    <td><h3>Defines a header for a document or section</h3></td>
+                    <td>&lt;header&gt;</td>
+                    <td>Header</td>
+                    <td>Defines a header for a document or section</td>
                 </tr>
                 <tr>
-                    <td><h3>&lt;footer&gt;</h3></td>
-                    <td><h3>Footer</h3></td>
-                    <td><h3>Defines a footer for a document or section</h3></td>
+                    <td>&lt;footer&gt;</td>
+                    <td>Footer</td>
+                    <td>Defines a footer for a document or section</td>
+                </tr>
+                <tr>
+                    <td>&lt;section&gt;</td>
+                    <td>Section</td>
+                    <td>Defines a section in a document</td>
                 </tr>
             </tbody>
         </table>
