Sent to remote. continue working at home

--- a/index.html
+++ b/index.html
@@ -5,39 +5,57 @@
         <link href="style.css" type="text/css" rel="stylesheet"/>
     </head>
     <body>
-        <header>
-            <h1>Common HTML tags</h1>
-        </header>
-        <table class="Table1">
-            <thead>
-                <tr>
-                    <th>Tag</th>
-                    <th>Name</th>
-                    <th>Description</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>&lt;html&gt;</td>
-                    <td>HTML</td>
-                    <td>Defines the root of an HTML document</td>
-                </tr>
-                <tr>
-                    <td>&lt;header&gt;</td>
-                    <td>Header</td>
-                    <td>Defines a header for a document or section</td>
-                </tr>
-                <tr>
-                    <td>&lt;footer&gt;</td>
-                    <td>Footer</td>
-                    <td>Defines a footer for a document or section</td>
-                </tr>
-                <tr>
-                    <td>&lt;section&gt;</td>
-                    <td>Section</td>
-                    <td>Defines a section in a document</td>
-                </tr>
-            </tbody>
-        </table>
+        <main>
+            <header>
+                <h1>Common HTML tags</h1>
+            </header>
+            <table class="Table1">
+                <thead>
+                    <tr>
+                        <th>Tag</th>
+                        <th>Name</th>
+                        <th>Description</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>&lt;html&gt;</td>
+                        <td>HTML</td>
+                        <td>Defines the root of an HTML document</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;header&gt;</td>
+                        <td>Header</td>
+                        <td>Defines a header for a document or section</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;footer&gt;</td>
+                        <td>Footer</td>
+                        <td>Defines a footer for a document or section</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;section&gt;</td>
+                        <td>Section</td>
+                        <td>Defines a section in a document</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;p&gt;</td>
+                        <td>Paragraph</td>
+                        <td>Defines a paragragh within an HTML document</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;img&gt;</td>
+                        <td>Image</td>
+                        <td>Used to embed an image in a HTML page</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
+        </main>
+        <footer>
+            <p>Obviously this s far from an exhuastive list. But it's been good practice with both HTML and CSS</p>
+        </footer>
     </body>
 </html>
