--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
                         <td>Defines a header for a document or section</td>
                     </tr>
                     <tr>
+                        <td>&lt;h1&gt; to &lt;h6&gt;</td>
+                        <td>Headings</td>
+                        <td>Used to define headings of different sizes</td>
+                    </tr>
+                    <tr>
                         <td>&lt;footer&gt;</td>
                         <td>Footer</td>
                         <td>Defines a footer for a document or section</td>
@@ -49,13 +54,30 @@
                         <td>Used to embed an image in a HTML page</td>
                     </tr>
                     <tr>
-                        <td></td>
+                        <td>&lt;video&gt;</td>
+                        <td>video</td>
+                        <td>Used to embed a video in an HTML page</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;div&gt;</td>
+                        <td>Division</td>
+                        <td>Container that divides the page into sectors</td>
                     </tr>
                 </tbody>
             </table>
+            <h1>CSS selectors</h1>
+            <table class="Table2">
+                thead>
+                <tr>
+                    <th>Selector</th>
+                    <th>Name</th>
+                    <th>Description</th>
+                </tr>
+                </thead>
+            </table>
         </main>
         <footer>
-            <p>Obviously this s far from an exhuastive list. But it's been good practice with both HTML and CSS</p>
+            <p>Obviously this is far from an exhuastive list. But it's been good practice with both HTML and CSS</p>
         </footer>
     </body>
 </html>
