--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <body>
         <main>
             <header>
-                <h1>Common HTML tags</h1>
+                <h1>HTML and CSS Cheatsheet</h1>
+                <p>This is my cheatsheet outside of using the interwebs</p>
             </header>
             <table class="Table1">
                 <thead>
@@ -65,15 +66,28 @@
                     </tr>
                 </tbody>
             </table>
-            <h1>CSS selectors</h1>
+            <br />
+            <h1>CSS selectors and coding</h1>
             <table class="Table2">
-                thead>
-                <tr>
-                    <th>Selector</th>
-                    <th>Name</th>
-                    <th>Description</th>
-                </tr>
+                <thead>
+                    <tr>
+                        <th>Selector and/or coding</th>
+                        <th>Name</th>
+                        <th>Description</th>
+                    </tr>
                 </thead>
+                <tbody>
+                    <tr>
+                        <td>.class</td>
+                        <td>"class"</td>
+                        <td>denotes type of object or container that is to be formated in CSS</td>
+                    </tr>
+                    <tr>
+                        <td>font-family</td>
+                        <td>Font family</td>
+                        <td>Used in CSS coding to chage the style of font</td>
+                    </tr>
+                </tbody>
             </table>
         </main>
         <footer>
