Full Commit after styling

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
                 <h1>HTML and CSS Cheatsheet</h1>
                 <p>This is my cheatsheet outside of using the interwebs</p>
             </header>
+            <h2>Common HTML tags</h2>
             <table class="Table1">
                 <thead>
                     <tr>
@@ -67,7 +68,7 @@
                 </tbody>
             </table>
             <br />
-            <h1>CSS selectors and coding</h1>
+            <h2>CSS selectors and coding</h2>
             <table class="Table2">
                 <thead>
                     <tr>
