Update after some CSS refresher

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <main>
-            <header>
+            <div class="header">
                 <h1>HTML and CSS Cheatsheet</h1>
                 <p>This is my cheatsheet outside of using the interwebs</p>
-            </header>
+            </div>
             <h2>Common HTML tags</h2>
             <table class="Table1">
                 <thead>
